--- a/src/main/resources/com/example/courseprifs/main-form.fxml
+++ b/src/main/resources/com/example/courseprifs/main-form.fxml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.CheckBox?>
 <?import javafx.scene.control.ComboBox?>
@@ -66,12 +65,9 @@
                         <ComboBox fx:id="filterClients" layoutX="190.0" layoutY="24.0" onAction="#filterOrders" prefWidth="150.0" />
                         <DatePicker fx:id="filterFrom" layoutX="359.0" layoutY="24.0" onAction="#filterOrders" prefHeight="25.0" prefWidth="154.0" />
                         <DatePicker fx:id="filterTo" layoutX="528.0" layoutY="24.0" onAction="#filterOrders" prefHeight="25.0" prefWidth="145.0" />
-                        <ListView fx:id="basicUserList" layoutX="473.0" layoutY="72.0" prefHeight="269.0" prefWidth="98.0">
-                           <padding>
-                              <Insets right="10.0" />
-                           </padding></ListView>
+                        <ListView fx:id="basicUserList" layoutX="473.0" layoutY="72.0" prefHeight="269.0" prefWidth="98.0" />
                         <ListView fx:id="cuisineList" layoutX="581.0" layoutY="72.0" prefHeight="269.0" prefWidth="103.0" AnchorPane.leftAnchor="581.0" AnchorPane.rightAnchor="20.0" />
-                        <Button layoutX="575.0" layoutY="364.0" mnemonicParsing="false" text="View Chat" />
+                        <Button layoutX="575.0" layoutY="364.0" mnemonicParsing="false" onAction="#loadChatForm" text="View Chat" />
                      </children></AnchorPane>
               </content>
             </Tab>
@@ -105,9 +101,23 @@
               <content>
                 <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
                      <children>
-                        <ListView layoutX="23.0" layoutY="23.0" prefHeight="365.0" prefWidth="184.0" />
+                        <ListView fx:id="allChats" layoutX="23.0" layoutY="23.0" onMouseClicked="#loadChatMessages" prefHeight="365.0" prefWidth="184.0">
+                           <contextMenu>
+                              <ContextMenu>
+                                <items>
+                                  <MenuItem mnemonicParsing="false" onAction="#deleteChat" text="Delete chat" />
+                                </items>
+                              </ContextMenu>
+                           </contextMenu></ListView>
                         <Button layoutX="524.0" layoutY="363.0" mnemonicParsing="false" text="Update" />
-                        <ListView layoutX="235.0" layoutY="23.0" prefHeight="366.0" prefWidth="166.0" />
+                        <ListView fx:id="chatMessages" layoutX="235.0" layoutY="23.0" prefHeight="366.0" prefWidth="166.0">
+                           <contextMenu>
+                              <ContextMenu>
+                                <items>
+                                  <MenuItem mnemonicParsing="false" onAction="#deleteMessage" text="Delete message" />
+                                </items>
+                              </ContextMenu>
+                           </contextMenu></ListView>
                      </children></AnchorPane>
               </content>
             </Tab>
@@ -124,7 +134,7 @@
                      </children></AnchorPane>
               </content>
             </Tab>
-            <Tab fx:id="altTab" onSelectionChanged="#reloadTableData" text="Alternative user management">
+            <Tab fx:id="altTab" onSelectionChanged="#reloadTableData" text="Alternative User management">
               <content>
                 <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
                      <children>
