--- a/src/main/resources/com/example/courseprifs/chat-form.fxml
+++ b/src/main/resources/com/example/courseprifs/chat-form.fxml
@@ -1,14 +1,24 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ContextMenu?>
 <?import javafx.scene.control.ListView?>
+<?import javafx.scene.control.MenuItem?>
 <?import javafx.scene.control.TextArea?>
 <?import javafx.scene.layout.AnchorPane?>
 
 <AnchorPane prefHeight="329.0" prefWidth="476.0" xmlns="http://javafx.com/javafx/25" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.courseprifs.fxControllers.ChatForm">
    <children>
-      <ListView fx:id="messageList" layoutX="28.0" layoutY="25.0" prefHeight="173.0" prefWidth="422.0" />
+      <ListView fx:id="messageList" layoutX="28.0" layoutY="25.0" onMouseClicked="#loadMessageBody" prefHeight="173.0" prefWidth="422.0">
+         <contextMenu>
+            <ContextMenu>
+              <items>
+                  <MenuItem mnemonicParsing="false" onAction="#deleteMessage" text="Delete message" />
+              </items>
+            </ContextMenu>
+         </contextMenu></ListView>
       <TextArea fx:id="messageBody" layoutX="28.0" layoutY="214.0" prefHeight="58.0" prefWidth="422.0" promptText="Message" />
       <Button layoutX="217.0" layoutY="284.0" mnemonicParsing="false" onAction="#sendMessage" text="Send" />
+      <Button layoutX="28.0" layoutY="284.0" mnemonicParsing="false" onAction="#editMessage" text="Edit" />
    </children>
 </AnchorPane>
