--- a/src/main/resources/com/example/courseprifs/main-form.fxml
+++ b/src/main/resources/com/example/courseprifs/main-form.fxml
@@ -44,7 +44,7 @@
               <content>
                 <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="445.0" prefWidth="759.0">
                      <children>
-                        <ListView fx:id="orderListField" layoutX="21.0" layoutY="72.0" onMouseClicked="#loadOrderInfo" prefHeight="317.0" prefWidth="262.0">
+                        <ListView fx:id="orderListField" layoutX="21.0" layoutY="83.0" onMouseClicked="#loadOrderInfo" prefHeight="306.0" prefWidth="270.0">
                            <contextMenu>
                               <ContextMenu>
                                 <items>
@@ -52,21 +52,24 @@
                                 </items>
                               </ContextMenu>
                            </contextMenu></ListView>
-                        <TextField fx:id="orderNameField" layoutX="301.0" layoutY="81.0" promptText="Order name" />
-                        <TextField fx:id="orderPriceField" layoutX="301.0" layoutY="116.0" promptText="Price" />
+                        <TextField fx:id="orderNameField" layoutX="301.0" layoutY="83.0" promptText="Order name" />
+                        <TextField fx:id="orderPriceField" layoutX="301.0" layoutY="124.0" promptText="Price" />
                         <Button layoutX="301.0" layoutY="364.0" mnemonicParsing="false" onAction="#createOrder" text="Add" />
                         <Button layoutX="369.0" layoutY="364.0" mnemonicParsing="false" onAction="#updateOrder" text="Update" />
                         <Button layoutX="447.0" layoutY="364.0" mnemonicParsing="false" onAction="#deleteOrder" text="Delete" />
-                        <ComboBox fx:id="orderClientList" layoutX="301.0" layoutY="150.0" prefWidth="150.0" promptText="Client" />
-                        <ComboBox fx:id="orderRestaurantList" layoutX="301.0" layoutY="182.0" onAction="#loadRestaurantMenuForOrder" prefWidth="150.0" promptText="Restaurant" />
-                        <ComboBox fx:id="orderStatusField" layoutX="301.0" layoutY="218.0" prefWidth="150.0" promptText="Order Status" />
+                        <ComboBox fx:id="orderClientList" layoutX="301.0" layoutY="162.0" prefWidth="150.0" promptText="Client" />
+                        <ComboBox fx:id="orderRestaurantList" layoutX="301.0" layoutY="199.0" onAction="#loadRestaurantMenuForOrder" prefWidth="150.0" promptText="Restaurant" />
+                        <ComboBox fx:id="orderStatusField" layoutX="301.0" layoutY="235.0" prefWidth="150.0" promptText="Order Status" />
                         <ComboBox fx:id="filterStatus" layoutX="21.0" layoutY="24.0" onAction="#filterOrders" prefWidth="150.0" promptText="Filter Status" />
                         <ComboBox fx:id="filterClients" layoutX="190.0" layoutY="24.0" onAction="#filterOrders" prefWidth="150.0" promptText="Filter Client" />
                         <DatePicker fx:id="filterFrom" layoutX="359.0" layoutY="24.0" onAction="#filterOrders" prefHeight="25.0" prefWidth="154.0" promptText="Date From" />
                         <DatePicker fx:id="filterTo" layoutX="528.0" layoutY="24.0" onAction="#filterOrders" prefHeight="25.0" prefWidth="145.0" promptText="Date To" />
-                        <ListView fx:id="basicUserList" layoutX="473.0" layoutY="72.0" prefHeight="269.0" prefWidth="98.0" />
-                        <ListView fx:id="cuisineList" layoutX="581.0" layoutY="72.0" prefHeight="269.0" prefWidth="103.0" AnchorPane.leftAnchor="581.0" AnchorPane.rightAnchor="20.0" />
-                        <Button layoutX="575.0" layoutY="364.0" mnemonicParsing="false" onAction="#loadChatForm" text="View Chat" />
+                        <ListView fx:id="cuisineList" layoutX="462.0" layoutY="81.0" prefHeight="260.0" prefWidth="217.0" AnchorPane.leftAnchor="462.0" AnchorPane.rightAnchor="20.0" />
+                        <Button layoutX="610.0" layoutY="364.0" mnemonicParsing="false" onAction="#loadChatForm" text="View Chat" />
+                        <Label layoutX="21.0" layoutY="64.0" text="Orders:" />
+                        <Label layoutX="462.0" layoutY="64.0" text="Select cuisine for order:" />
+                        <Label layoutX="301.0" layoutY="64.0" text="Order details:" />
+                        <Label layoutX="21.0" layoutY="6.0" text="Filters:" />
                      </children></AnchorPane>
               </content>
             </Tab>
@@ -74,7 +77,7 @@
               <content>
                 <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
                      <children>
-                        <ListView fx:id="cuisineListField" layoutX="14.0" layoutY="40.0" onMouseClicked="#loadMenuItemInfo" prefHeight="348.0" prefWidth="227.0">
+                        <ListView fx:id="cuisineListField" layoutX="14.0" layoutY="80.0" onMouseClicked="#loadMenuItemInfo" prefHeight="308.0" prefWidth="382.0">
                            <contextMenu>
                               <ContextMenu>
                                 <items>
@@ -82,17 +85,22 @@
                                 </items>
                               </ContextMenu>
                            </contextMenu></ListView>
-                        <TextField fx:id="cuisineTitleField" layoutX="267.0" layoutY="28.0" prefHeight="25.0" prefWidth="199.0" promptText="Title" />
-                        <TextArea fx:id="cuisineDescriptionField" layoutX="267.0" layoutY="91.0" prefHeight="110.0" prefWidth="200.0" promptText="Description" />
-                        <ComboBox fx:id="cuisineAllergensField" layoutX="268.0" layoutY="206.0" prefHeight="25.0" prefWidth="199.0" promptText="Allergens" />
-                        <Button layoutX="267.0" layoutY="363.0" mnemonicParsing="false" onAction="#createNewMenuItem" text="Add" />
-                        <Button layoutX="333.0" layoutY="363.0" mnemonicParsing="false" onAction="#updateMenuItem" text="Update" />
-                        <Button layoutX="415.0" layoutY="363.0" mnemonicParsing="false" onAction="#deleteCuisine" text="Delete" />
-                        <TextField fx:id="cuisinePriceField" layoutX="268.0" layoutY="59.0" prefHeight="25.0" prefWidth="198.0" promptText="Price" />
-                        <Label layoutX="14.0" layoutY="24.0" text="Meniu:" />
-                        <ListView fx:id="cuisineRestaurantList" layoutX="268.0" layoutY="238.0" onMouseClicked="#loadRestaurantMenu" prefHeight="105.0" prefWidth="200.0" />
-                        <CheckBox fx:id="isSpicy" layoutX="505.0" layoutY="24.0" mnemonicParsing="false" text="Spicy" />
-                        <CheckBox fx:id="isVegan" layoutX="505.0" layoutY="59.0" mnemonicParsing="false" text="Vegan" />
+                        <TextField fx:id="cuisineTitleField" layoutX="411.0" layoutY="79.0" prefHeight="25.0" prefWidth="199.0" promptText="Title" />
+                        <TextArea fx:id="cuisineDescriptionField" layoutX="411.0" layoutY="142.0" prefHeight="82.0" prefWidth="200.0" promptText="Description" />
+                        <ComboBox fx:id="cuisineAllergensField" layoutX="412.0" layoutY="233.0" prefHeight="25.0" prefWidth="199.0" promptText="Allergens" />
+                        <Button layoutX="411.0" layoutY="361.0" mnemonicParsing="false" onAction="#createNewMenuItem" text="Add" />
+                        <Button layoutX="477.0" layoutY="361.0" mnemonicParsing="false" onAction="#updateMenuItem" text="Update" />
+                        <Button layoutX="559.0" layoutY="361.0" mnemonicParsing="false" onAction="#deleteCuisine" text="Delete" />
+                        <TextField fx:id="cuisinePriceField" layoutX="412.0" layoutY="110.0" prefHeight="25.0" prefWidth="198.0" promptText="Price" />
+                        <Label layoutX="14.0" layoutY="62.0" text="Menu:" />
+                        <ListView fx:id="cuisineRestaurantList" layoutX="412.0" layoutY="265.0" onMouseClicked="#loadRestaurantMenu" prefHeight="85.0" prefWidth="200.0" />
+                        <CheckBox fx:id="isSpicy" layoutX="620.0" layoutY="80.0" mnemonicParsing="false" text="Spicy" />
+                        <CheckBox fx:id="isVegan" layoutX="620.0" layoutY="111.0" mnemonicParsing="false" text="Vegan" />
+                        <Label layoutX="411.0" layoutY="62.0" text="Cuisine details:" />
+                        <ComboBox fx:id="filterAllergens" layoutX="14.0" layoutY="25.0" onAction="#filterCuisine" prefWidth="150.0" promptText="Filter Allergens" />
+                        <CheckBox fx:id="filterVegan" layoutX="188.0" layoutY="29.0" mnemonicParsing="false" onAction="#filterCuisine" text="Is Vegan?" />
+                        <CheckBox fx:id="filterSpicy" layoutX="277.0" layoutY="29.0" mnemonicParsing="false" onAction="#filterCuisine" text="Is Spicy?" />
+                        <Label layoutX="14.0" layoutY="8.0" text="Filters:" />
                      </children></AnchorPane>
               </content>
             </Tab>
@@ -100,7 +108,7 @@
               <content>
                 <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
                      <children>
-                        <ListView fx:id="allChats" layoutX="23.0" layoutY="23.0" onMouseClicked="#loadChatMessages" prefHeight="365.0" prefWidth="184.0">
+                        <ListView fx:id="allChats" layoutX="14.0" layoutY="33.0" onMouseClicked="#loadChatMessages" prefHeight="365.0" prefWidth="237.0">
                            <contextMenu>
                               <ContextMenu>
                                 <items>
@@ -108,8 +116,8 @@
                                 </items>
                               </ContextMenu>
                            </contextMenu></ListView>
-                        <Button layoutX="524.0" layoutY="363.0" mnemonicParsing="false" text="Update" />
-                        <ListView fx:id="chatMessages" layoutX="235.0" layoutY="23.0" prefHeight="366.0" prefWidth="166.0">
+                        <Button layoutX="566.0" layoutY="206.0" mnemonicParsing="false" onAction="#updateMessage" text="Update" />
+                        <ListView fx:id="chatMessages" layoutX="271.0" layoutY="33.0" onMouseClicked="#loadMessageBody" prefHeight="366.0" prefWidth="214.0">
                            <contextMenu>
                               <ContextMenu>
                                 <items>
@@ -117,7 +125,10 @@
                                 </items>
                               </ContextMenu>
                            </contextMenu></ListView>
-                        <Button layoutX="500.0" layoutY="160.0" mnemonicParsing="false" text="Button" />
+                        <TextArea fx:id="messageBodyField" layoutX="502.0" layoutY="33.0" prefHeight="165.0" prefWidth="183.0" />
+                        <Label layoutX="14.0" layoutY="15.0" text="Chats:" />
+                        <Label layoutX="271.0" layoutY="15.0" text="Chat Messages:" />
+                        <Label layoutX="502.0" layoutY="15.0" text="Update selected message:" />
                      </children></AnchorPane>
               </content>
             </Tab>
@@ -125,7 +136,7 @@
               <content>
                 <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
                      <children>
-                        <ListView fx:id="reviewListField" layoutX="21.0" layoutY="20.0" onMouseClicked="#loadReviewInfo" prefHeight="365.0" prefWidth="412.0">
+                        <ListView fx:id="reviewListField" layoutX="21.0" layoutY="35.0" onMouseClicked="#loadReviewInfo" prefHeight="350.0" prefWidth="412.0">
                            <contextMenu>
                               <ContextMenu>
                                 <items>
@@ -133,12 +144,14 @@
                                 </items>
                               </ContextMenu>
                            </contextMenu></ListView>
-                        <TextField fx:id="reviewRatingField" layoutX="462.0" layoutY="63.0" prefHeight="25.0" prefWidth="198.0" promptText="Rating (1-5)" />
-                        <TextArea fx:id="reviewCommentField" layoutX="461.0" layoutY="107.0" prefHeight="191.0" prefWidth="200.0" promptText="Comment" />
-                        <Button layoutX="461.0" layoutY="359.0" mnemonicParsing="false" onAction="#addReview" text="Add" />
-                        <Button layoutX="533.0" layoutY="359.0" mnemonicParsing="false" onAction="#updateReview" text="Update" />
+                        <TextField fx:id="reviewRatingField" layoutX="462.0" layoutY="76.0" prefHeight="25.0" prefWidth="198.0" promptText="Rating (1-5)" />
+                        <TextArea fx:id="reviewCommentField" layoutX="461.0" layoutY="120.0" prefHeight="191.0" prefWidth="200.0" promptText="Comment" />
+                        <Button fx:id="reviewAddButton" layoutX="461.0" layoutY="359.0" mnemonicParsing="false" onAction="#addReview" text="Add" />
+                        <Button fx:id="reviewUpdateButton" layoutX="533.0" layoutY="359.0" mnemonicParsing="false" onAction="#updateReview" text="Update" />
                         <Button layoutX="610.0" layoutY="359.0" mnemonicParsing="false" onAction="#deleteReview" text="Delete" />
-                        <ComboBox fx:id="reviewRestaurantList" layoutX="462.0" layoutY="20.0" prefHeight="25.0" prefWidth="198.0" promptText="Restaurant" />
+                        <ComboBox fx:id="reviewRestaurantList" layoutX="462.0" layoutY="33.0" onAction="#filterReviews" prefHeight="25.0" prefWidth="198.0" promptText="Restaurant" />
+                        <Label layoutX="21.0" layoutY="14.0" text="Reviews:" />
+                        <Label layoutX="462.0" layoutY="14.0" text="Review details:" />
                      </children></AnchorPane>
               </content>
             </Tab>
@@ -146,10 +159,11 @@
               <content>
                 <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
                      <children>
-                        <ListView fx:id="userListField" layoutX="14.0" layoutY="14.0" prefHeight="183.0" prefWidth="668.0" />
+                        <ListView fx:id="userListField" layoutX="16.0" layoutY="30.0" prefHeight="183.0" prefWidth="668.0" />
                         <Button layoutX="95.0" layoutY="235.0" mnemonicParsing="false" onAction="#addUser" text="Add new user" />
                         <Button layoutX="309.0" layoutY="235.0" mnemonicParsing="false" onAction="#loadUser" text="Update user" />
                         <Button layoutX="510.0" layoutY="235.0" mnemonicParsing="false" onAction="#deleteUser" text="Delete user" />
+                        <Label layoutX="16.0" layoutY="14.0" text="Users:" />
                      </children>
                   </AnchorPane>
               </content>
